--- a/girls_section/girls.html
+++ b/girls_section/girls.html
@@ -3,83 +3,154 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Girls Toys</title>
+    <title>WonderToys | Girls Section</title>
+    <link rel="stylesheet" href="girls3.css">
 
-    <link rel="stylesheet" href="new3.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&family=Nunito:wght@400;700&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
-
     <section class="top">
         <div class="top-text">
-            <p class="tagline"> Girls Collection</p>
+            <p> Best Sellers</p>
             <h1>Dream Big, Play Bigger!</h1>
-            <p>Fun toys that spark imagination.</p>
+            <p>From Barbie Dreamhouses to LEGO castles. Fun that never ends.</p>
             <a href="#items" class="btn">Shop Now</a>
         </div>
-
-        <img class="top-img" src="https://placehold.co/400x300/FF8FA3/fff?text=Toys" alt="">
+        <img src="https://placehold.co/400x300/FF8FA3/fff?text=Girl+Power" alt="Happy Kids">
     </section>
-
 
     <div class="layout" id="items">
 
         <aside class="filters">
             <h3>Filters</h3>
 
-            <p class="filter-title">Category</p>
+            <p><strong>Category</strong></p>
             <label><input type="checkbox" checked> Dolls</label>
-            <label><input type="checkbox"> Arts</label>
-            <label><input type="checkbox"> STEM</label>
-            <label><input type="checkbox"> Plushies</label>
-
-            <p class="filter-title">Age</p>
+            <label><input type="checkbox" checked> Arts & Crafts</label>
+            <label><input type="checkbox" checked> STEM</label>
+            <label><input type="checkbox" checked> Plushies</label>
+            <br>
+            <p><strong>Age Group</strong></p>
             <select>
-                <option>All</option>
-                <option>3 - 5</option>
-                <option>6 - 8</option>
-                <option>9 - 12</option>
+                <option>All Ages</option>
+                <option>3 - 5 Years</option>
+                <option>6 - 8 Years</option>
+                <option>9 - 12 Years</option>
             </select>
         </aside>
 
         <main class="products">
             
             <div class="item">
-                <img src="https://placehold.co/250x250/FFC0CB/fff?text=Castle" alt="">
-                <h4>Princess Castle</h4>
+                <img src="https://placehold.co/250x250/FF69B4/fff?text=Barbie+House" alt="Barbie">
+                <h4>Barbie Dreamhouse</h4>
                 <p class="cat">Dolls</p>
-                <p class="price">$89.99</p>
-                <button class="small-btn">Add</button>
+                <p class="price">$199.99</p>
+                <button class="small-btn">Add to Cart</button>
             </div>
 
             <div class="item">
-                <img src="https://placehold.co/250x250/80FFDB/333?text=Chemistry" alt="">
+                <img src="https://placehold.co/250x250/A0C4FF/fff?text=Elsa+Doll" alt="Frozen">
+                <h4>Frozen Elsa Singing Doll</h4>
+                <p class="cat">Dolls</p>
+                <p class="price">$29.99</p>
+                <button class="small-btn">Add to Cart</button>
+            </div>
+
+            <div class="item">
+                <img src="https://placehold.co/250x250/4CC9F0/fff?text=LEGO+Friends" alt="LEGO">
+                <h4>LEGO Friends Garden</h4>
+                <p class="cat">STEM</p>
+                <p class="price">$49.99</p>
+                <button class="small-btn">Add to Cart</button>
+            </div>
+
+            <div class="item">
+                <img src="https://placehold.co/250x250/FFC0CB/333?text=Hello+Kitty" alt="Hello Kitty">
+                <h4>Hello Kitty Art Case</h4>
+                <p class="cat">Arts</p>
+                <p class="price">$24.99</p>
+                <button class="small-btn">Add to Cart</button>
+            </div>
+
+            <div class="item">
+                <img src="https://placehold.co/250x250/FFD700/333?text=LOL+Surprise" alt="LOL">
+                <h4>L.O.L. Surprise! Ball</h4>
+                <p class="cat">Dolls</p>
+                <p class="price">$12.99</p>
+                <button class="small-btn">Add to Cart</button>
+            </div>
+
+            <div class="item">
+                <img src="https://placehold.co/250x250/FFD60A/333?text=Squishmallow" alt="Squishmallow">
+                <h4>Squishmallow Unicorn</h4>
+                <p class="cat">Plushies</p>
+                <p class="price">$24.99</p>
+                <button class="small-btn">Add to Cart</button>
+            </div>
+
+            <div class="item">
+                <img src="https://placehold.co/250x250/E0B0FF/fff?text=Gabbys+House" alt="Gabby">
+                <h4>Gabby's Purrfect House</h4>
+                <p class="cat">Dolls</p>
+                <p class="price">$59.99</p>
+                <button class="small-btn">Add to Cart</button>
+            </div>
+
+            <div class="item">
+                <img src="https://placehold.co/250x250/80FFDB/333?text=Chemistry" alt="Chemistry">
                 <h4>Chemistry Lab Kit</h4>
                 <p class="cat">STEM</p>
                 <p class="price">$34.50</p>
-                <button class="small-btn">Add</button>
+                <button class="small-btn">Add to Cart</button>
             </div>
 
             <div class="item">
-                <img src="https://placehold.co/250x250/E0B0FF/fff?text=Jewelry" alt="">
-                <h4>DIY Bracelet Set</h4>
+                <img src="https://placehold.co/250x250/9D4EDD/fff?text=Bracelets" alt="Bracelets">
+                <h4>DIY Friendship Bracelets</h4>
                 <p class="cat">Arts</p>
                 <p class="price">$19.99</p>
-                <button class="small-btn">Add</button>
+                <button class="small-btn">Add to Cart</button>
+            </div>
+
+            <div class="item">
+                <img src="https://placehold.co/250x250/7209B7/fff?text=Robot+Mouse" alt="Robot">
+                <h4>Coding Robot Mouse</h4>
+                <p class="cat">STEM</p>
+                <p class="price">$55.00</p>
+                <button class="small-btn">Add to Cart</button>
+            </div>
+
+            <div class="item">
+                <img src="https://placehold.co/250x250/FF99C8/fff?text=Peppa+Pig" alt="Peppa">
+                <h4>Peppa Pig Plush</h4>
+                <p class="cat">Plushies</p>
+                <p class="price">$15.99</p>
+                <button class="small-btn">Add to Cart</button>
+            </div>
+
+             <div class="item">
+                <img src="https://placehold.co/250x250/4895EF/fff?text=Bluey" alt="Bluey">
+                <h4>Bluey & Bingo Set</h4>
+                <p class="cat">Plushies</p>
+                <p class="price">$28.00</p>
+                <button class="small-btn">Add to Cart</button>
             </div>
 
         </main>
 
     </div>
 
-
     <footer class="footer">
-        <p>© 2023 WonderToys</p>
+        <p>© 2023 WonderToys. Home of Barbie, LEGO & More!</p>
     </footer>
 
 </body>
 </html>
 
+
+
            
+
 
