--- a/girls_section/girls.html
+++ b/girls_section/girls.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WonderToys | Girls Section</title>
-    <link rel="stylesheet" href="girls3.css">
-
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&family=Nunito:wght@400;700&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="girls.css">
 </head>
 
 <body>
