--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
   </section>
 
   <section class="section reveal">
+    <a href="boys_section/boys.html">
     <div class="big-card">
       <img src="media/boys_logo.jpg" alt="">
-      👦 Popular Among Boys</div>
-    <div class="big-card">👧 Popular Among Girls</div>
+      👦 Popular Among Boys</div></a>
+    <a href="girls_section/girls.html">
+      <div class="big-card">👧 Popular Among Girls</div></a>
   </section>
 
   <section class="age-select">
