--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
     document.addEventListener('DOMContentLoaded', () => {
       initSlideshow({
         images: [
-          "https://via.placeholder.com/600x600.png?text=Toy+1",
-          "https://via.placeholder.com/600x600.png?text=Toy+2",
-          "https://via.placeholder.com/600x600.png?text=Toy+3"
+          "media/hero.png",
+          "media/boys_logo.jpg"
         ],
         holdMs: 2500,
         transitionMs: 700
